force-app/main/default/objects/Flow_Error__c/Flow_Error__c.object-meta.xml
<CustomObject>
    <description>Logs errors from automated flows for monitoring and troubleshooting. Used by succession management flows to capture DML failures, lookup errors, and other exceptions.</description>
    <label>Flow Error</label>
    <pluralLabel>Flow Errors</pluralLabel>
    <nameField>
        <displayFormat>FE-{00000}</displayFormat>
        <label>Flow Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>