force-app/main/default/objects/Flow_Error__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Full error message returned by Salesforce</description>
    <inlineHelpText>Complete error message with stack trace details</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>