force-app/main/default/objects/Flow_Error__c/fields/Error_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Error_Timestamp__c</fullName>
    <description>Date and time when the error occurred</description>
    <inlineHelpText>Exact timestamp when the flow error was encountered</inlineHelpText>
    <label>Error Timestamp</label>
    <type>DateTime</type>
</CustomField>