force-app/main/default/objects/Flow_Error__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Category of error that occurred</description>
    <inlineHelpText>Type of error: DML (insert/update/delete), Lookup (record not found), or Logic (business rule violation)</inlineHelpText>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DML</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Logic</fullName>
            </value>
            <value>
                <fullName>Scheduled Action</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>