force-app/main/default/objects/Flow_Error__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>Name of the flow that encountered the error</description>
    <inlineHelpText>The API name of the flow that generated this error</inlineHelpText>
    <label>Flow Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>