force-app/main/default/objects/Flow_Error__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Salesforce ID of the record that caused the error</description>
    <inlineHelpText>The 15 or 18 character Salesforce ID of the record being processed when error occurred</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>