force-app/main/default/objects/Flow_Error__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the error has been resolved and corrective action taken</description>
    <inlineHelpText>Check this box after resolving the error and taking any necessary corrective actions</inlineHelpText>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>