force-app/main/default/objects/Flow_Error__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User context when error occurred</description>
    <inlineHelpText>The user whose actions triggered the flow that encountered an error</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Flow_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>